--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -2,67 +2,104 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Contact Us</title>
+<title>AHD INDIA</title>
+
+<!-- external cdn links for styling -->
+<!-- bootstrap -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!-- animate css -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+<!-- fontawsome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
+<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+<link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
+
+<!-- local css -->
+<link rel="stylesheet" href="assets/css/customeStyle.css">
+<link rel="stylesheet" href="assets/css/header.css">
+<link rel="stylesheet" href="assets/css/responsive.css">
+
 </head>
 
 <body>
-<form id="form1" name="form1" method="post" action="">
-  <table width="100%" border="0">
-    <tr>
-      <td width="40%"><a href="home.html"><img src="logo.png" width="200" height="100" /></a></td>
-      <td width="60%" height="30%"><div align="left"><font size="+3"><a href="home.html">AHD INDIA</a></td>
-    </tr></table>
-  <table align="right" width="40%" height="44" border="0" widht=100%>
-  	<tr>
-      <td width="18%" height="40"><div align="right">
-      <a href="home.html">Home</a></td>
-      <td width="18%"><div align="right">
-      <a href="about us.html">About Us</a></td>
-      <td width="18%"><div align="right">
-      <a href="ServicesAm.html">Services</a></td>
-      <td width="18%"><div align="right">
-      <a href="projects.html">Projects</a></td>
-      <td width="18%"><a href="Contact_US.html">
-        <div align="right">
-      <a href="Contact_Us.html"><a href="Contact_Us.html">Contact Us</a></td>
-      <td width="8%"></td>
-    </tr>
-  </table><br /><br />
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%"  align="center" border="0">
-    <tr>
-      <td height="20"><font size="+2">Welcome to AHD Enterprises, India. This is running line</td>
-    </tr>
-  </table>
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" align="center" border="0">
-    <tr>
-      <td><h1>Contact Info</h1>
-      </tr>
-    <tr>
-      <td><font size="+2">For any query you can reach to us directly.          
-    </tr>
-    <tr>
-      <td><p><font size="+2">E-mail :<a href="mailto:amitkumar2234@gmail.com">amitkumar2234@gmail.com</p>    
-    </tr>
-    <tr>
-      <td><p><font size="+2"><strong>Address :</strong> H.No 225/7, Bhim Nagar,</p>
-    <p> Near Chander Diary, Gurgaon, 122001. </p></tr>
-    <tr>
-      <td>    <font size="+2"><a href="tel:+91-965-433-7771">Phone : +91-965-433-7771</a>
-    </tr>
-      </table>
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="100%" border="0">
-    <tr>
-      <th width="25%" height="33" scope="row"><a href="mailto:amitkumar2234@gmail.com">Email Us </a></th>
-      <th width="45%" scope="row"><a href="home.html">Home</a></th>
-      <th width="25%" scope="row"><a href="Contact_US.html">Contact Us</a></th>
-    </tr>
-  </table>
-</form>
+  <!-- header stip -->
+  <div class="socialMedia col-12">
+    <a href="" class="topIconLink"><i class="far fa-envelope topIcon" title="Send Us A Mail"></i></a>
+    <a href="" class="topIconLink"><i class="fas fa-map-marker-alt topIcon" title="Find Us Here"></i></a>
+    <a href="" class="topIconLink"><i class="fas fa-phone-alt topIcon" title="Call Us"></i></a>
+  </div>
+  <div style="background-color: darkcyan;" class="mainDiv aboutSticky col-12">
+    <div class="navDIv col-12 float-right">
+      <!-- Classy Menu -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand stickyLogo" href="#"><img style="width: 20%;" src="./assets/img/logo.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav mr-auto col-12 mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutus.html">About Us</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="ServicesAm.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+            
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <!-- header stip -->
+  
+  <!-- contact -->
+  <div id="contactUs">
+    <div class="bgLyrCont">
+      <div class="container text-white">
+        <div class="headerText py-5 text-center">
+          <h4><u>Connect With Us</u></h4>
+        </div>
+        <div class="col-6 text-center contactBody col-xs-12">
+          <div class="bodyText text-left">
+            <h5 class="mb-5">
+              <strong>For any queries, you can reach to us directly.</strong>
+            </h5>
+            <div class="col-1 addCol addColIcon"><i class="far fa-envelope"></i></div>
+            <div class="col-11 addCol"><p><a href="mailto:amitkumar2234@gmail.com">amitkumar2234@gmail.com</a></p></div>
+            <div class="col-1 addCol addColIcon"><i class="fas fa-mobile-alt"></i></div>
+            <div class="col-11 addCol"><p><a href="tel:+91-965-433-7771">Phone : +91-965-433-7771</a></p></div>
+            <div class="col-1 addCol addColIcon"><i class="fas fa-map-marked-alt"></i></div>
+            <div class="col-11 addCol">
+              <p>H.No 225/7, Bhim Nagar,</p>
+              <p>Gurgaon, 122001. </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-xs-12 contactBody">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.365295657015!2d77.01910071455522!3d28.468543582482763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d19d299b0b5cb%3A0xa81f3fb482215b96!2sLink%20Rd%2C%20Bhim%20Nagar%2C%20Sector%206%2C%20Gurugram%2C%20Haryana%20122006!5e0!3m2!1sen!2sin!4v1589820129008!5m2!1sen!2sin" width="600" height="272" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+      <div class="col-4 footerNav">
+      <a href="href:mailto:amitkumar2234@gmail.com">EMAIL Us</a>
+    </div>
+    <div class="col-4  footerNav">
+      <a href="index.html">HOME</a>
+    </div>
+    <div class="col-4  footerNav">
+      <a href="Contact_Us.html">CONTACT US</a>
+    </div>
+  </footer>
+
 </body>
 </html>
