--- a/ServicesAm.html
+++ b/ServicesAm.html
@@ -2,61 +2,99 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Services</title>
+<title>AHD INDIA</title>
+
+<!-- external cdn links for styling -->
+<!-- bootstrap -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!-- animate css -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+<!-- fontawsome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
+<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+<link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
+
+<!-- local css -->
+<link rel="stylesheet" href="assets/css/customeStyle.css">
+<link rel="stylesheet" href="assets/css/header.css">
+<link rel="stylesheet" href="assets/css/responsive.css">
+
 </head>
+
 <body>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" border="0">
-    <tr>
-      <td width="40%"><a href="home.html"><img src="logo.png" width="200" height="100" /></a></td>
-      <td width="60%" height="30%"><div align="left"><font size="+3"><a href="home.html">AHD INDIA</a></td>
-    </tr></table>
-  <table align="right" width="40%" height="44" border="0" widht=100%>
-  	<tr>
-      <td width="18%" height="40"><div align="right">
-      <a href="home.html">Home</a></td>
-      <td width="18%"><div align="right">
-      <a href="about us.html">About Us</a></td>
-      <td width="18%"><div align="right">
-      <a href="ServicesAm.html">Services</a></td>
-      <td width="18%"><a href="ServicesAm.html"><a href="projects.html">
-        <div align="right">
-      <a href="projects.html"><a href="projects.html">Project</a></td>
-      <td width="18%"><a href="Contact_US.html">
-        <div align="right">
-      <a href="Contact_Us.html"><a href="Contact_Us.html"><a href="Contact_Us.html">Contact Us</a></td>
-      <td width="8%"></td>
-    </tr>
-  </table><br /><br />
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" align="center" border="0">
-    <tr>
-      <td height="20"><font size="+2">Welcome to AHD Enterprises, India. This is running line</td>
-    </tr>
-  </table>
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" align="center" border="0">
-    <tr>
-      <td colspan="2"><font size="+3"><strong>Services</strong></td>
-    </tr>
-    <tr>
-      <td width="60%" align="justify"><font size="+2">
-      <p>AHD India gets his first  chance to develop canopies for Passenger Boarding Bridges in 2015. Since then  we have delivered more than forty five (45) canopies for <strong>Bukaka</strong>, <strong>NKI</strong> and <strong>Thyesson</strong> to most of the airports in  India. Now AHD is supplying many part of Passenger Boarding Bridge (PBB) to different  companies in India.<font size="+2"></p>
-      <p>Our prospect is to  satisfy the continuing needs and expectations of clients, while complying with  the agreed standards and specifications.</p></td>
-      <td width="40%" align="center"><img src="canopy6.png" width="400" height="350" /></td>
-    </tr>
-  </table>
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" align="center" border="0">
-    <tr>
-      <th width="25%" height="33" scope="row"><a href="mailto:amitkumar2234@gmail.com">Email Us </a></th>
-      <th width="45%" scope="row"><a href="home.html">Home</a></th>
-      <th width="25%" scope="row"><a href="Contact_US.html">Contact Us</a></th>
-    </tr>
-  </table>
-</form>
-</body>
-</html>
+  <!-- header stip -->
+  <div class="socialMedia col-12">
+    <a href="" class="topIconLink"><i class="far fa-envelope topIcon" title="Send Us A Mail"></i></a>
+    <a href="" class="topIconLink"><i class="fas fa-map-marker-alt topIcon" title="Find Us Here"></i></a>
+    <a href="" class="topIconLink"><i class="fas fa-phone-alt topIcon" title="Call Us"></i></a>
+  </div>
+  <div class="mainDiv sticky col-12">
+    <div class="navDIv col-12 float-right">
+      <!-- Classy Menu -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand stickyLogo" href="#"><img src="./assets/img/logo.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav mr-auto col-12 mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="aboutus.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Contact_Us.html">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <div class="nextSections" id="aboutUs">
+    <div class="container">
+      <div class="headerText text-center pb-5">
+        <h4><u>Services</u></h4>
+      </div>
+      <div class="pt-5">
+        <div class="col-6 col-xs-12 float-left">
+          <div class="headerText">
+            <!-- <h4>Welcome to AHD India.</h4> -->
+          </div>
+          <div class="bodyText">
+            <h6>
+              AHD India gets his first chance to develop canopies for Passenger Boarding Bridges in 2015. Since then we have delivered more than 45 canopies for Bukaka, NKI and Thyssenkrupp to most of the airports in India. Now AHD is supplying many part of Passenger Boarding Bridge Conopies to different companies in India.
+            </h6>
+            <h7>Our prospect is to satisfy the continuing needs and expectations of clients, while complying with the agreed standards and specifications.</h7>
+            </div>
+        </div>
+        <div class="col-6 col-xs-12 float-left" style="height: 18em;overflow: hidden;;">
+          <div id="slider">
+            <figure>
+              <img src="./assets/img/canopy1.jpg" alt>
+              <img src="./assets/img/canopy2.jpg" alt>
+              <img src="./assets/img/canopy3.jpg" alt>
+              <img src="./assets/img/canopy4.jpg" alt>
+              <img src="./assets/img/canopy6.png" alt>
+            </figure>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="col-4 footerNav">
+    <a href="href:mailto:amitkumar2234@gmail.com">EMAIL Us</a>
+  </div>
+  <div class="col-4  footerNav">
+    <a href="index.html">HOME</a>
+  </div>
+  <div class="col-4  footerNav">
+    <a href="Contact_Us.html">CONTACT US</a>
+  </div>
+</footer>
