--- a/aboutus.html
+++ b/aboutus.html
@@ -40,16 +40,16 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav mr-auto col-12 mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="./index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="ServicesAm.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./Contact_Us.html">Contact Us</a>
+              <a class="nav-link" href="Contact_Us.html">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -67,23 +67,27 @@
       <div class="pt-5">
         <div class="col-6 col-xs-12 float-left">
           <div class="headerText">
-            <h4>Welcome to AHD Enterprises, India.</h4>
+            <h4>Welcome to AHD India.</h4>
           </div>
           <div class="bodyText">
-            <h6>
-              AHD India is the young and dynamic entrant into the space of manufacturing Passenger Boarding Bridge Canopy with the vision to provide high quality products. AHD India was established by his Director Mr. Amit Malhotra in year 2015 with the prospect to build canopies for Passenger Boarding Bridge.
+            <h6><br>
+              AHD India has the specialization in the domain of manufacturing Passenger Boarding Bridge Canopy with the prospect to satisfy the continuing needs and expectations of clients, while complying with the agreed standards and specifications.<br><br>
+
+Mr. Amit Malhotra has a vision to get pioneer in Technologies, Solution & Services.<br><br>
+
+AHD INDIA is doing projects under Make in India concept by Indian Government. Their vision is to develop products which we are importing from other countries in India.
             </h6>
-            <p>Know More About Us....</p>
+            <!-- <p>Know More About Us....</p> -->
             <!-- <a href="./aboutus.html" class="readBtn">Read More</a> -->
           </div>
         </div>
         <div class="col-6 col-xs-12 float-left" style="height: 18em;overflow: hidden;;">
           <div id="slider">
             <figure>
-              <img src="./assets/img/canopy1.jpg" alt>
-              <img src="./assets/img/canopy2.jpg" alt>
-              <img src="./assets/img/canopy3.jpg" alt>
-              <img src="./assets/img/canopy4.jpg" alt>
+              <!-- <img src="./assets/img/canopy1.jpg" alt> -->
+              <img src="./assets/img/4.jpg" alt>
+              <!-- <img src="./assets/img/canopy3.jpg" alt>
+              <img src="./assets/img/canopy4.jpg" alt> -->
               <img src="./assets/img/canopy6.png" alt>
             </figure>
             </div>
@@ -94,16 +98,16 @@
 
  
   <footer>
-    <div class="col-4  footerNav">
-      <a href="./index.html">HOME</a>
-    </div>
     <div class="col-4 footerNav">
-      <a href="href://mailto:amitkumar2234@gmail.com">SEND A MAIL</a>
-    </div>
-    <div class="col-4  footerNav">
-      <a href="./Contact_Us.html">CONTACT US</a>
-    </div>
-  </footer>
+    <a href="href:mailto:amitkumar2234@gmail.com">EMAIL Us</a>
+  </div>
+  <div class="col-4  footerNav">
+    <a href="index.html">HOME</a>
+  </div>
+  <div class="col-4  footerNav">
+    <a href="Contact_Us.html">CONTACT US</a>
+  </div>
+</footer>
   
   <div class="scrollUp scrolling">
     <a href="#top"><i class="fas fa-angle-up"></i></a>
