--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
               <a class="nav-link" href="#aboutUs">About Us</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="ServicesAm.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./Contact_Us.html">Contact Us</a>
+              <a class="nav-link" href="#contactUs">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -67,7 +67,7 @@
           <img src="assets/img/logo.png" alt="logo.png" id="logo">
         </div> -->
 
-        <h1 class="tagLine col-12 text-center">Welcome to AHD Enterprises, India. </h1>
+        <h1 class="tagLine col-12 text-center">Welcome to AHD India. </h1>
       </div>
     </div>
   </header>
@@ -77,16 +77,16 @@
   <div class="nextSections" id="aboutUs">
     <div class="container">
       <div class="headerText text-center pb-5">
-        <h4><u>About Us</u></h4>
+        <h4><u>AHD INDIA</u></h4>
       </div>
       <div class="pt-5">
         <div class="col-6 col-xs-12 float-left">
           <div class="headerText">
-            <h4>Welcome to AHD Enterprises, India.</h4>
+            <h4>Welcome to AHD India.</h4>
           </div>
           <div class="bodyText">
             <h6>
-              AHD India is the young and dynamic entrant into the space of manufacturing Passenger Boarding Bridge Canopy with the vision to provide high quality products. AHD India was established by his Director Mr. Amit Malhotra in year 2015 with the prospect to build canopies for Passenger Boarding Bridge.
+            AHD India is the young and dynamic entrant into the space of manufacturing Passenger Boarding Bridge Canopy with the vision to provide high quality products.<br> AHD India was established by his Director Mr. Amit Malhotra in year 2015 with the prospect to build canopies for Passenger Boarding Bridge.
             </h6>
             <p>Know More About Us....</p>
             <a href="./aboutus.html" class="readBtn">Read More</a>
@@ -118,8 +118,8 @@
           <h6>
             Ahd India has successfully completed multiple projects from 2015 to till now.
           </h6>
-          <p>AHD supplied Passenger Boarding Bridge to more then 28 Airports in India which are of Bukaka, NKI, Thyesson PBBs.</p>
-          <p>Here are some of the projects completed by AHD INDIA</p>
+          <p>AHD has supplied Passenger Boarding Bridge Conopies to more then 28 Airports in India which are of Bukaka, NKI, Thyssenkrupp PBBs.</p>
+          <p>Here is the list of some of the projects completed by AHD INDIA</p>
         </div>
         <section class="airportSider">
           <!-- Airport Slider Area -->
@@ -151,18 +151,24 @@
             <div class="col-6 float-left">
               <div class="col-12 container">
                 <ul class=" text-center">
-                  <li class="airClass">Jaipur Airport</li>
-                  <li class="airClass">Udaipur Airport</li>
-                  <li class="airClass">Lucknow Airport</li>
-                </ul>
+                  <li class="airClass">Amritsar Airport</li>
+                  <li class="airClass">Bengaluru Airport</li>
+                  <li class="airClass">Bhuvneshwar Airport</li>
+                  <li class="airClass">Chandigarh Airport</li>
+                 </ul>
               </div>
             </div>
             <div class="col-6 float-right">
               <div class="col-12 container">
                 <ul class="text-center">
-                  <li class="airClass">Bengaluru Airport</li>
+                  <li class="airClass">Chennai Airport</li>
+                  <li class="airClass">Jaipur Airport</li>
+                  <li class="airClass">Jammu Airport</li>
+                  <li class="airClass">Kolkata Airport</li>
+                  <li class="airClass">Lucknow Airport</li>
+                  <li class="airClass">Srinagar Airport</li>
                   <li class="airClass">Trichy Airport</li>
-                  <li class="airClass">Bhuvneshwar Airport</li>
+                  <li class="airClass">Udaipur Airport</li>
                 </ul>
               </div>
             </div>
@@ -191,7 +197,7 @@
             <div class="col-1 addCol addColIcon"><i class="fas fa-map-marked-alt"></i></div>
             <div class="col-11 addCol">
               <p>H.No 225/7, Bhim Nagar,</p>
-              <p> Near Chander Diary, Gurgaon, 122001. </p>
+              <p>Gurgaon, 122001. </p>
             </div>
           </div>
         </div>
@@ -203,14 +209,14 @@
   </div>
 
   <footer>
-    <div class="col-4  footerNav">
-      <a href="./index.html">HOME</a>
-    </div>
-    <div class="col-4 footerNav">
-      <a href="href://mailto:amitkumar2234@gmail.com">SEND A MAIL</a>
+      <div class="col-4 footerNav">
+      <a href="href:mailto:amitkumar2234@gmail.com">EMAIL Us</a>
     </div>
     <div class="col-4  footerNav">
-      <a href="./Contact_Us.html">CONTACT US</a>
+      <a href="index.html">HOME</a>
+    </div>
+    <div class="col-4  footerNav">
+      <a href="Contact_Us.html">CONTACT US</a>
     </div>
   </footer>
   
