--- a/projects.html
+++ b/projects.html
@@ -2,88 +2,143 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Documento sin título</title>
+<title>AHD INDIA</title>
+
+<!-- external cdn links for styling -->
+<!-- bootstrap -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!-- animate css -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+<!-- fontawsome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
+<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+<link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
+
+<!-- local css -->
+<link rel="stylesheet" href="assets/css/customeStyle.css">
+<link rel="stylesheet" href="assets/css/header.css">
+<link rel="stylesheet" href="assets/css/responsive.css">
+
 </head>
 
 <body>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" border="0">
-    <tr>
-      <td width="40%"><a href="home.html"><img src="logo.png" width="200" height="100" /></a></td>
-      <td width="60%" height="30%"><div align="left"><font size="+3"><a href="home.html">AHD INDIA</a></td>
-    </tr></table>
-  <table align="right" width="40%" height="44" border="0" widht=100%>
-  	<tr>
-      <td width="18%" height="40"><div align="right">
-      <a href="home.html">Home</a></td>
-      <td width="18%"><div align="right">
-      <a href="about us.html">About Us</a></td>
-      <td width="18%"><div align="right">
-      <a href="ServicesAm.html">Services</a></td>
-      <td width="18%"><div align="right">
-      <a href="projects.html">Projects</a></td>
-      <td width="18%"><a href="Contact_US.html">
-        <div align="right">
-      <a href="Contact_Us.html"><a href="Contact_Us.html"><a href="Contact_Us.html"><a href="Contact_Us.html">Contact Us</a></td>
-      <td width="8%"></td>
-    </tr>
-  </table><br /><br />
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" align="center" border="0">
-    <tr>
-      <td height="20"><font size="+2">Welcome to AHD Enterprises, India. This is running line</td>
-    </tr>
-  </table>
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" align="center" border="0">
-    <tr>
-      <td colspan="2"><font size="+3"><strong>Projects</strong></td>
-    </tr>
-    <tr>
-      <td colspan="2"><p><font size="+2">Ahd India has successfully completed multiple projects  from 2015 to till now. </p>
-      <div>AHD supplied Passenger Boarding Bridge to more  then 28 Airports in India which are of  Bukaka,  NKI, Thyesson  PBBs.</div></td>
-    </tr>
-    <tr>
-      <td colspan="2"><font size="+2">Here is the list of some projects completed by AHD INDIA -</td>
-    </tr>
-    <tr>
-      <td colspan="2">&nbsp;</td>
-    </tr>
-    <tr>
-      <td colspan="2">&nbsp;</td>
-    </tr>
-    <tr>
-      <td width="60%"><font size="+2">Jaipur Airport</td>
-      <td width="60%" rowspan="5">&nbsp;</td>
-    </tr>
-    <tr>
-      <td><font size="+2">Udaipur Airport</td>
-    </tr>
-    <tr>
-      <td><font size="+2">Lucknow Airport</td>
-    </tr>
-    <tr>
-      <td><font size="+2">Bengaluru Airport</td>
-    </tr>
-    <tr>
-      <td><font size="+2">Trichy</td>
-    </tr>
-    <tr>
-      <td><font size="+2">Bhuvneshwar</td>
-      <td><font size="+2">and much more.</td>
-    </tr>
-  </table>
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" align="center" border="0">
-    <tr>
-      <th width="25%" height="33" scope="row"><a href="mailto:amitkumar2234@gmail.com">Email Us </a></th>
-      <th width="45%" scope="row"><a href="home.html">Home</a></th>
-      <th width="25%" scope="row"><a href="Contact_US.html">Contact Us</a></th>
-    </tr>
-  </table>
-</form>
+  <!-- header stip -->
+  <div class="socialMedia col-12">
+    <a href="" class="topIconLink"><i class="far fa-envelope topIcon" title="Send Us A Mail"></i></a>
+    <a href="" class="topIconLink"><i class="fas fa-map-marker-alt topIcon" title="Find Us Here"></i></a>
+    <a href="" class="topIconLink"><i class="fas fa-phone-alt topIcon" title="Call Us"></i></a>
+  </div>
+  <div style="background-color: darkcyan;" class="mainDiv aboutSticky col-12">
+    <div class="navDIv col-12 float-right">
+      <!-- Classy Menu -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand stickyLogo" href="#"><img style="width: 20%;" src="./assets/img/logo.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav mr-auto col-12 mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="aboutus.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ServicesAm.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Contact_Us.html">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <!-- header stip -->
+  <!-- projects -->
+  <div class="nextSections" id="projects">
+    <div class="container">
+      <div class="col-12  col-sm-12 col-xs-12 text-center">
+        <div class="headerText pb-5">
+          <h4><u>Our Projects</u></h4>
+        </div>
+        <div class="bodyText">
+          <h6>
+            Ahd India has successfully completed multiple projects from 2015 to till now.
+          </h6>
+          <p>AHD has supplied Passenger Boarding Bridge Conopies to more then 28 Airports in India which are of Bukaka, NKI, Thyssenkrupp PBBs.</p>
+          <p>Here is the list of some of the projects completed by AHD INDIA</p>
+        </div>
+        <section class="airportSider">
+          <!-- Airport Slider Area -->
+          <!-- <div class="owl-carousel">
+            <div class="item">
+              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="item">
+              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="item">
+              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="item">
+              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
+              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="item">
+              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
+            </div>
+          </div> -->
+          <div class="prt">
+            <!-- <div class="prtImg">
+              <img src="./assets/img/canopy2.png" alt="">
+            </div>
+            <div class="prtImg">
+              <img src="./assets/img/canopy4.jpg" alt="">
+            </div> -->
+            <div class="col-6 float-left">
+              <div class="col-12 container">
+                <ul class=" text-center">
+                  <li class="airClass">Amritsar Airport</li>
+                  <li class="airClass">Bengaluru Airport</li>
+                  <li class="airClass">Bhuvneshwar Airport</li>
+                  <li class="airClass">Chandigarh Airport</li>
+                 </ul>
+              </div>
+            </div>
+            <div class="col-6 float-right">
+              <div class="col-12 container">
+                <ul class="text-center">
+                  <li class="airClass">Chennai Airport</li>
+                  <li class="airClass">Jaipur Airport</li>
+                  <li class="airClass">Jammu Airport</li>
+                  <li class="airClass">Kolkata Airport</li>
+                  <li class="airClass">Lucknow Airport</li>
+                  <li class="airClass">Srinagar Airport</li>
+                  <li class="airClass">Trichy Airport</li>
+                  <li class="airClass">Udaipur Airport</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+
+<footer>
+  <div class="col-4 footerNav">
+  <a href="href:mailto:amitkumar2234@gmail.com">EMAIL Us</a>
+</div>
+<div class="col-4  footerNav">
+  <a href="index.html">HOME</a>
+</div>
+<div class="col-4  footerNav">
+  <a href="Contact_Us.html">CONTACT US</a>
+</div>
+</footer>
+
 </body>
 </html>
